RESOLVED FIXED61151
WebKit2: Exit full screen mode if the WebProcess crashes.
https://bugs.webkit.org/show_bug.cgi?id=61151
Summary WebKit2: Exit full screen mode if the WebProcess crashes.
Jer Noble
Reported 2011-05-19 15:24:00 PDT
WebKit2: Exit full screen mode if the WebProcess crashes.
Attachments
Patch (7.90 KB, patch)
2011-05-19 16:10 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2011-05-19 16:08:37 PDT
Jer Noble
Comment 2 2011-05-19 16:10:02 PDT
Maciej Stachowiak
Comment 3 2011-05-20 13:30:45 PDT
Comment on attachment 94137 [details] Patch r=me
WebKit Commit Bot
Comment 4 2011-05-20 15:36:34 PDT
Comment on attachment 94137 [details] Patch Clearing flags on attachment: 94137 Committed r86992: <http://trac.webkit.org/changeset/86992>
WebKit Commit Bot
Comment 5 2011-05-20 15:36:39 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.