third_party/WebKit/Source/WebCore/platform/graphics/win/FullScreenController.h
@@ -47,6 +47,8 @@ public:
     
     bool isFullScreen() const;
 
+    void close();
+
 protected:
     void enterFullScreenRepaintCompleted();
     void exitFullScreenRepaintCompleted();
