third_party/WebKit/Source/WebKit2/UIProcess/WebFullScreenManagerProxy.cpp
@@ -50,11 +50,6 @@ WebFullScreenManagerProxy::~WebFullScreenManagerProxy()
 {
 }
 
-void WebFullScreenManagerProxy::invalidate()
-{
-    m_webView = 0;
-}
-
 void WebFullScreenManagerProxy::setWebView(PlatformWebView* webView)
 {
     m_webView = webView;
