third_party/WebKit/Source/WebKit2/UIProcess/mac/WKFullScreenWindowController.h
@@ -70,6 +70,7 @@ class IntRect;
 - (void)enterAcceleratedCompositingMode:(const WebKit::LayerTreeContext&)context;
 - (void)exitAcceleratedCompositingMode;
 - (WebCore::IntRect)getFullScreenRect;
+- (void)close;
 
 @end
 
