third_party/WebKit/Source/WebKit2/UIProcess/mac/WebFullScreenManagerProxyMac.mm
@@ -36,6 +36,15 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 namespace WebKit {
 
+void WebFullScreenManagerProxy::invalidate()
+{
+    if (!m_webView)
+        return;
+    
+    [[m_webView fullScreenWindowController] close];
+    m_webView = 0;
+}
+
 void WebFullScreenManagerProxy::enterFullScreen()
 {
     if (!m_webView)
